Fix folder 's "name too long" issue

--- a/src/scss/components/_folder.scss
+++ b/src/scss/components/_folder.scss
@@ -35,8 +35,7 @@
 
 // the div that has the folder name and the link
 .folder1 {
-    max-height: 50%;
-    max-width: 70%;
+    max-width: 55%;
     position: absolute;
     bottom: 0px;
     left: 30px;
